kubernetes-ingress/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: public
  rules:
    - http:
        paths:
        - path: /demo
          pathType: Exact
          backend:
            service:
              name: demo
              port:
                number: 80
